--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -18,4 +18,7 @@
     <!-- Application name -->
     <string name="protonplus_app_name" translatable="false">ProtonPlus Launcher</string>
 
+    <!-- Folder titles -->
+    <string name="google_folder_title" translatable="false">Google</string>
+
 </resources>
