Launcher3: Add a toggle for smartspace
Change-Id: I3b2681d51197642ba0957111db455937c0c376e8

--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -180,4 +180,8 @@
     <string name="single_page_center_title">Single page center</string>
     <string name="single_page_center_summary">Center wallpaper if only using a single page</string>
 
+    <!-- Smartspace -->
+    <string name="smartspace_pref_title">At a Glance</string>
+    <string name="smartspace_pref_summary">Show smartspace at the top of home screen</string>
+
 </resources>
