--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -158,4 +158,8 @@
     <string name="recent_task_option_kill_app">Kill</string>
     <string name="recents_app_killed">App killed</string>
 
+    <!-- App drawer searchbar -->
+    <string name="drawer_search_title">App search bar</string>
+    <string name="drawer_search_summary">Search bar on top of the app drawer</string>
+
 </resources>
