--- a/res/values/custom_dimens.xml
+++ b/res/values/custom_dimens.xml
@@ -19,4 +19,7 @@
     <!-- Overview scrolling scale animation -->
     <dimen name="overview_scroll_scale">0.9</dimen>
 
+    <!-- Search bar margin -->
+    <dimen name="all_apps_search_bar_margin_side">38dp</dimen>
+
 </resources>
